# rushwebsite

./: .coveragerc  .env  .env.example  .replit  README.md  check_db.py  check_settings.py  database_backup.json  db.sqlite3  fix_city_images.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  replit.nix  setup_data.py  simple_pg_test.py  test_azure_connections.py  test_db_config.py  test_new_db.py
accounts/: __init__.py  apps.py  csrf_exempt_views.py  forms.py  models.py  signals.py  urls.py  views.py
attached_assets/: Pasted-About-Us-Rush-Car-Rental-A-Local-Car-Rental-Brand-in-Australia-s-8-Major-Cities-At-Rush-Car-Rental--1743761636836.txt  Pasted-Car-Pickup-Guidelines-Discover-the-freedom-of-the-open-road-with-Rush-Car-Rental-where-exceptional--1743761056577.txt  Pasted-class-Location-AuditModelMixin-location-name-models-CharField-max-length-100-code-mod-1746079175874.txt
bookings/: __init__.py  admin.py  apps.py  forms.py  models.py  models_driver.py  urls.py  views.py
cars/: __init__.py  admin.py  models.py  urls.py  views.py
dev/: API_DESIGN.md  DESIGN.md  ENVIRONMENT_CONFIG.md  FRONTEND_DESIGN.md  INDEX.md  OTA_INTEGRATION.md  __init__.py  apps.py  database_design.md  database_migration_guide.md  debug_commands.py  development_guide.md  driver_information_integration.md  project_setup.md  stripe_integration.md  test_stripe.py  testing_guide.md
docs/: booking_flow_data_analysis.md  vehicle_display_and_booking_flow.md
locations/: __init__.py  admin.py  models.py  urls.py  views.py
pages/: __init__.py  admin.py  models.py  urls.py  (+1 more)
(+118 files in other folders)
