[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-widget-tweaks>=1.5.0",
    "django>=5.2",
    "django-crispy-forms>=2.3",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "stripe>=12.0.0",
]
