[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-widget-tweaks>=1.5.0",
    "django>=5.2",
    "django-crispy-forms>=2.3",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "stripe>=12.0.0",
    "python-dotenv>=1.1.0",
    "django-storages[azure]>=1.14.6",
    "django-redis>=5.4.0",
    "dj-database-url>=2.3.0",
]
